[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/tests/FloakerTestScene.gd" type="Script" id=1]
[ext_resource path="res://game/levels/border/FloakerDestroyer.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/levels/border/StaticBorder.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/levels/BulletsContainer.tscn" type="PackedScene" id=5]

[node name="FloakerTestScene" type="Node2D"]
script = ExtResource( 1 )

[node name="FloakerContainer" type="Node2D" parent="."]

[node name="StaticBorder" parent="." instance=ExtResource( 3 )]

[node name="BulletsContainer" parent="." instance=ExtResource( 5 )]

[node name="FloakerSpawner" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 741.784, 248.95 )

[node name="Position2D2" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 971.425, 216.989 )

[node name="Position2D3" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 1209.83, 252.961 )

[node name="Position2D4" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 919.691, 285.153 )

[node name="Position2D5" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 1035.19, 290.193 )

[node name="Position2D6" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 1091.74, 248.024 )

[node name="Position2D7" type="Position2D" parent="FloakerSpawner"]
position = Vector2( 855.923, 237.096 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="FloakerDestroyer" parent="." instance=ExtResource( 2 )]

[node name="Left" parent="FloakerDestroyer" index="0"]
position = Vector2( 196.873, 598 )

[node name="Right" parent="FloakerDestroyer" index="1"]
position = Vector2( 1734.2, 598 )

[node name="Up" parent="FloakerDestroyer" index="2"]
position = Vector2( 977.854, -31.8532 )

[node name="Down" parent="FloakerDestroyer" index="3"]
position = Vector2( 977.854, 1233.05 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="FloakerDestroyer"]
